# kestrel

./: .gitignore  Cargo.toml  README.md
assets/: icon-64.rgba
build-support/: embed_icon.rs
crates/kestrel-cli/: Cargo.toml  build.rs
crates/kestrel-cli/src/: main.rs  render.rs  repl.rs  term.rs
crates/kestrel-core/: Cargo.toml
crates/kestrel-core/src/: agent.rs  brand.rs  browser.rs  cache.rs  codenav.rs  config.rs  context.rs  diagnostics.rs  docwrite.rs  environment.rs  format.rs  graph.rs  inspect.rs  lib.rs  mail.rs  media.rs  memory.rs  office.rs  plan.rs  policy.rs  pricing.rs  project.rs  providers.rs  repos.rs  runlog.rs  secrets.rs  settings.rs  symbols.rs  syntax.rs  syscap.rs  tests_select.rs  treesitter.rs  usage_log.rs  verify.rs  websearch.rs  workflows.rs  workspace.rs
crates/kestrel-ui/: Cargo.toml  build.rs
crates/kestrel-ui/src/: main.rs
docs/: Kestrel_Advanced_Project_Overview.docx  README.md  autonomy-plan.md  document-backlog.md  feature-system.md  kestrel-work-plan.md  master-product-blueprint.md  product-requirements.md  progress.md  roadmap.md  technical-architecture.md  test-projects.md  vision-horizon.md  work-demos.md
