[package]
name = "kestrel-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# The package stays `kestrel-cli` (so `cargo run -p kestrel-cli` keeps working),
# but the binary users actually type is `kestrel`.
[[bin]]
name = "kestrel"
path = "src/main.rs"

[dependencies]
ctrlc = "3.5.2"
kestrel-core = { path = "../kestrel-core" }
rustyline = "18.0.1"
serde_json = "1"
similar = "2"
